shifted manual entry to nav bar, OCBC button doesnt do anything for now

--- a/app/src/main/res/layout/content_second_activitymodded.xml
+++ b/app/src/main/res/layout/content_second_activitymodded.xml
@@ -124,7 +124,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/manualInput"
+        android:id="@+id/ocbc_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -132,7 +132,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="#1F2734"
-        android:text="Manual"
+        android:text="OCBC"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/changeBudget"
@@ -149,7 +149,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="#1F2734"
-        android:text="SYNC"
+        android:text="Paylah"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/changeBudget"
