--- a/app/src/main/res/menu/activity_second_activitymodded_drawer.xml
+++ b/app/src/main/res/menu/activity_second_activitymodded_drawer.xml
@@ -28,6 +28,10 @@
             android:id="@+id/generate"
             android:icon="@drawable/scan"
             android:title="Generate QR" />
+        <item
+            android:id="@+id/manualEntry"
+            android:icon="@drawable/scan"
+            android:title="Manual Entry" />
     </group>
 
     <item android:title="App">
